Fixed logo size on small devices

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -44,7 +44,7 @@
     }
   }
   @media (--media-max-small) {
-    font-size: 1.5em;
+    font-size: 2.2em;
   }
 }
 
